--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -14,9 +14,9 @@ build:
 # configuration: mkdocs.yml
 
 # Optionally declare the Python requirements required to build your docs
-# python:
-#   install:
-#   - requirements: docs/requirements.txt
+python:
+   install:
+   - requirements: docs/requirements.txt
 
 # Reference: https://docs.readthedocs.io/en/latest/yaml-config.html
 
