--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,13 +10,13 @@ build:
   tools:
     python: "3.11"
 
-# mkdocs:
-# configuration: mkdocs.yml
+mkdocs:
+configuration: Makefile
 
 # Optionally declare the Python requirements required to build your docs
-python:
-   install:
-   - requirements: docs/requirements.txt
+#python:
+#   install:
+#   - requirements: docs/requirements.txt
 
 # Reference: https://docs.readthedocs.io/en/latest/yaml-config.html
 
