--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,8 +10,8 @@ build:
   tools:
     python: "3.11"
 
-mkdocs:
-configuration: Makefile
+#mkdocs:
+#configuration: Makefile
 
 # Optionally declare the Python requirements required to build your docs
 #python:
